简单修复一下路径指向错误

--- a/accordion.html
+++ b/accordion.html
@@ -40,25 +40,25 @@
 
     <ul id="box">
         <li style="background:red">
-            <img src="img/1.jpg">
+            <img src="img/img1.png">
         </li>
         <li style="background:orange">
-            <img src="img/2.jpg">
+            <img src="img/img2.png">
         </li>
         <li style="background:yellow">
-            <img src="img/3.jpg">
+            <img src="img/img3.png">
         </li>
         <li style="background:green">
-            <img src="img/4.jpg">
+            <img src="img/img4.png">
         </li>
         <li style="background:blue">
-            <img src="img/5.jpg">
+            <img src="img/img5.png">
         </li>
         <li style="background:pink">
-            <img src="img/6.jpg">
+            <img src="img/img6.png">
         </li>
         <li style="background:black">
-            <img src="img/7.jpg">
+            <img src="img/img7.png">
         </li>
     </ul>
     <script src="js/accordion.js"></script>
