--- a/qrcode.html
+++ b/qrcode.html
@@ -7,6 +7,7 @@
     <meta name="Author" content="">
     <meta name="Keywords" content="">
     <meta name="Description" content="">
+    <script src="js/readInfo.js"></script>
     <script src="js/jquery.js"></script>
     <script src="js/qrcode.min.js"></script>
     <title>qrcode</title>
