--- a/buried.html
+++ b/buried.html
@@ -7,41 +7,52 @@
 	<meta name="viewport"
 		content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no,viewport-fit=cover" />
 	<title>获取埋点</title>
-	<script src="js/readInfo.js"></script>
+	<script src="js/centalab-sdk.js"></script>
+	<!-- <script src="js/readInfo.js"></script> -->
 	<!-- <script src="https://imonitor.centaline.com.cn/static/js/monitor.readinfo.min.js?v=2021526"></script> -->
 </head>
 
 <body>
 	<button id="jumpUrl">点击我跳转地址</button>
+	<button id="copyText">点击我复制内容</button>
 </body>
 <script>
 	var customData = {
 		obj: '123143',
 		send: '123124'
 	}
-	console.log(window.__MONITOR_PAGE_LOAD__);
-	window.__MONITOR_PAGE_LOAD__()
+	console.log(window.lab);
+	lab.pageLoad()
 	jumpUrl.onclick = function (e) {
 		location.pathname = 'qrcode.html'
-		let data = window.__MONITOR_CLICK_ELEMENT__(e)
-		window.__MONITOR_SEND_LOG__(data)
+		let data = lab.clickElement(e)
+		lab.trigger(data)
 	}
 	function sendMonitorInfo(ev, customData) {
 		//此方法为点击事件埋点方法 需要事件对象
 		//ev为事件对象  不传的话默认取body, customData为需要传递的参数 会合并到埋点要发送的对象里	
 		ev = ev || document.body;
-		var data = window.__MONITOR_CLICK_ELEMENT__(ev)
+		var data = lab.clickElement(ev)
 		data = Object.assign(data, customData)
-		window.__MONITOR_SEND_LOG__(data)
+		window.lab.trigger(data)
 	}
 	function sendMonitorLoadInfo(customData) {
 		// 此方法为页面加载事件方法
 		//customData为需要传递的参数 会合并到埋点要发送的对象里	
 		if (ev) {
-			var data = window.__MONITOR_PAGE_LOAD__()
+			var data = lab.pageLoad()
 			data = Object.assign(data, customData)
-			window.__MONITOR_SEND_LOG__(data)
+			window.lab.trigger(data)
 		}
+	}
+
+	copyText.onclick = function () {
+		wx.setClipboardData({
+			data: 'data',    // 设置的
+			success: function (res) {
+				console.log(res.errMsg)
+			}
+		})
 	}
 
 </script>
