--- a/qrcode.html
+++ b/qrcode.html
@@ -8,8 +8,8 @@
     <meta name="Keywords" content="">
     <meta name="Description" content="">
     <!-- <script src="js/centalab-sdk-copy.js"></script> -->
-    <script src="js/monitor.readinfo.min.js"></script>
-    <!-- <script src="https://imonitor.centaline.com.cn/sdk/centalab-sdk.js"></script> -->
+    <!-- <script src="js/monitor.readinfo.min.js"></script> -->
+    <script src="https://imonitor.centaline.com.cn/sdk/centalab-sdk.js"></script>
     <script src="js/jquery.js"></script>
     <script src="js/qrcode.min.js"></script>
     <title>qrcode</title>
