--- a/buried.html
+++ b/buried.html
@@ -8,9 +8,9 @@
 		content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no,viewport-fit=cover" />
 	<title>获取埋点</title>
 	<script src="js/tools.js"></script>
-	<!-- <script src="js/centalab-sdk-copy.js"></script> -->
-	<!-- <script src="js/monitor.readinfo.min.js"></script> -->
-	<script src="https://imonitor.centaline.com.cn/sdk/centalab-sdk.js"></script>
+	<!-- <script src="js/centalab-sdk.js"></script> -->
+	<script src="js/monitor.readinfo.min.js"></script>
+	<!-- <script src="https://imonitor.centaline.com.cn/sdk/centalab-sdk.js"></script> -->
 </head>
 
 <body>
