配置获取剪切板的内容

--- a/getClipBoard.html
+++ b/getClipBoard.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 </head>
+
 <body>
 	<div id="copyBtn">
 		点击我获取剪切板
@@ -13,12 +15,23 @@
 </body>
 <script>
 	navigator.clipboard
-	.readText()
-	.then((v) => {
-		alert("获取剪贴板成功："+v);
-	})
-	.catch((v) => {
-		alert("获取剪贴板失败: "+ v);
-	});
+		.readText()
+		.then((v) => {
+			alert("获取剪贴板成功：" + v);
+		})
+		.catch((v) => {
+			alert("获取剪贴板失败: " + v);
+		});
+	copyBtn.onclick = function () {
+		navigator.clipboard
+			.readText()
+			.then((v) => {
+				alert("获取剪贴板成功：" + v);
+			})
+			.catch((v) => {
+				alert("获取剪贴板失败: " + v);
+			});
+	}
 </script>
+
 </html>
