修改标签为a标签

--- a/getClipBoard.html
+++ b/getClipBoard.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-	<div id="copyBtn">
+	<a id="copyBtn" href="javascript:void 0">
 		点击我获取剪切板
-	</div>
+	</a>
 </body>
 <script>
 	navigator.clipboard
