去除初始化时获取剪切板的操作

--- a/getClipBoard.html
+++ b/getClipBoard.html
@@ -14,14 +14,14 @@
 	</a>
 </body>
 <script>
-	navigator.clipboard
-		.readText()
-		.then((v) => {
-			alert("获取剪贴板成功：" + v);
-		})
-		.catch((v) => {
-			alert("获取剪贴板失败: " + v);
-		});
+	// navigator.clipboard
+	// 	.readText()
+	// 	.then((v) => {
+	// 		alert("获取剪贴板成功：" + v);
+	// 	})
+	// 	.catch((v) => {
+	// 		alert("获取剪贴板失败: " + v);
+	// 	});
 	copyBtn.onclick = function () {
 		navigator.clipboard
 			.readText()
